// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Function Plus 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                12,
                13,
                15,
                16,
              ],
              "categoryMatchesMap": Object {
                "12": true,
                "13": true,
                "15": true,
                "16": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 12,
        },
        "tokenTypeIdx": 12,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "combineExpression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "FunctionCall": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "Arguments": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "Comma": Array [
                                                                              Object {
                                                                                "endColumn": 16,
                                                                                "endLine": 1,
                                                                                "endOffset": 15,
                                                                                "image": ",",
                                                                                "startColumn": 16,
                                                                                "startLine": 1,
                                                                                "startOffset": 15,
                                                                                "tokenType": Object {
                                                                                  "CATEGORIES": Array [],
                                                                                  "PATTERN": /,/,
                                                                                  "categoryMatches": Array [],
                                                                                  "categoryMatchesMap": Object {},
                                                                                  "isParent": false,
                                                                                  "name": "Comma",
                                                                                  "tokenTypeIdx": 36,
                                                                                },
                                                                                "tokenTypeIdx": 36,
                                                                              },
                                                                            ],
                                                                            "expression": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "combineExpression": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "lhs": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "rhs": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "lhs": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "lhs": Array [
                                                                                                            Object {
                                                                                                              "children": Object {
                                                                                                                "lhs": Array [
                                                                                                                  Object {
                                                                                                                    "children": Object {
                                                                                                                      "lhs": Array [
                                                                                                                        Object {
                                                                                                                          "children": Object {
                                                                                                                            "lhs": Array [
                                                                                                                              Object {
                                                                                                                                "children": Object {
                                                                                                                                  "lhs": Array [
                                                                                                                                    Object {
                                                                                                                                      "children": Object {
                                                                                                                                        "constantExpression": Array [
                                                                                                                                          Object {
                                                                                                                                            "children": Object {
                                                                                                                                              "NumberLiteralExpression": Array [
                                                                                                                                                Object {
                                                                                                                                                  "children": Object {
                                                                                                                                                    "NumberLiteral": Array [
                                                                                                                                                      Object {
                                                                                                                                                        "endColumn": 15,
                                                                                                                                                        "endLine": 1,
                                                                                                                                                        "endOffset": 14,
                                                                                                                                                        "image": "1",
                                                                                                                                                        "startColumn": 15,
                                                                                                                                                        "startLine": 1,
                                                                                                                                                        "startOffset": 14,
                                                                                                                                                        "tokenType": Object {
                                                                                                                                                          "CATEGORIES": Array [],
                                                                                                                                                          "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                                                                                          "categoryMatches": Array [],
                                                                                                                                                          "categoryMatchesMap": Object {},
                                                                                                                                                          "isParent": false,
                                                                                                                                                          "name": "NumberLiteral",
                                                                                                                                                          "tokenTypeIdx": 33,
                                                                                                                                                        },
                                                                                                                                                        "tokenTypeIdx": 33,
                                                                                                                                                      },
                                                                                                                                                    ],
                                                                                                                                                  },
                                                                                                                                                  "name": "NumberLiteralExpression",
                                                                                                                                                },
                                                                                                                                              ],
                                                                                                                                            },
                                                                                                                                            "name": "constantExpression",
                                                                                                                                          },
                                                                                                                                        ],
                                                                                                                                      },
                                                                                                                                      "name": "atomicExpression",
                                                                                                                                    },
                                                                                                                                  ],
                                                                                                                                },
                                                                                                                                "name": "chainExpression",
                                                                                                                              },
                                                                                                                            ],
                                                                                                                          },
                                                                                                                          "name": "multiplicationExpression",
                                                                                                                        },
                                                                                                                      ],
                                                                                                                    },
                                                                                                                    "name": "additionExpression",
                                                                                                                  },
                                                                                                                ],
                                                                                                              },
                                                                                                              "name": "concatExpression",
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "compareExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "equalCompareExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "notExpression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "combineExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "expression",
                                                                              },
                                                                              Object {
                                                                                "children": Object {
                                                                                  "combineExpression": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "lhs": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "rhs": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "lhs": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "lhs": Array [
                                                                                                            Object {
                                                                                                              "children": Object {
                                                                                                                "lhs": Array [
                                                                                                                  Object {
                                                                                                                    "children": Object {
                                                                                                                      "lhs": Array [
                                                                                                                        Object {
                                                                                                                          "children": Object {
                                                                                                                            "lhs": Array [
                                                                                                                              Object {
                                                                                                                                "children": Object {
                                                                                                                                  "lhs": Array [
                                                                                                                                    Object {
                                                                                                                                      "children": Object {
                                                                                                                                        "constantExpression": Array [
                                                                                                                                          Object {
                                                                                                                                            "children": Object {
                                                                                                                                              "NumberLiteralExpression": Array [
                                                                                                                                                Object {
                                                                                                                                                  "children": Object {
                                                                                                                                                    "NumberLiteral": Array [
                                                                                                                                                      Object {
                                                                                                                                                        "endColumn": 18,
                                                                                                                                                        "endLine": 1,
                                                                                                                                                        "endOffset": 17,
                                                                                                                                                        "image": "1",
                                                                                                                                                        "startColumn": 18,
                                                                                                                                                        "startLine": 1,
                                                                                                                                                        "startOffset": 17,
                                                                                                                                                        "tokenType": Object {
                                                                                                                                                          "CATEGORIES": Array [],
                                                                                                                                                          "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                                                                                          "categoryMatches": Array [],
                                                                                                                                                          "categoryMatchesMap": Object {},
                                                                                                                                                          "isParent": false,
                                                                                                                                                          "name": "NumberLiteral",
                                                                                                                                                          "tokenTypeIdx": 33,
                                                                                                                                                        },
                                                                                                                                                        "tokenTypeIdx": 33,
                                                                                                                                                      },
                                                                                                                                                    ],
                                                                                                                                                  },
                                                                                                                                                  "name": "NumberLiteralExpression",
                                                                                                                                                },
                                                                                                                                              ],
                                                                                                                                            },
                                                                                                                                            "name": "constantExpression",
                                                                                                                                          },
                                                                                                                                        ],
                                                                                                                                      },
                                                                                                                                      "name": "atomicExpression",
                                                                                                                                    },
                                                                                                                                  ],
                                                                                                                                },
                                                                                                                                "name": "chainExpression",
                                                                                                                              },
                                                                                                                            ],
                                                                                                                          },
                                                                                                                          "name": "multiplicationExpression",
                                                                                                                        },
                                                                                                                      ],
                                                                                                                    },
                                                                                                                    "name": "additionExpression",
                                                                                                                  },
                                                                                                                ],
                                                                                                              },
                                                                                                              "name": "concatExpression",
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "compareExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "equalCompareExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "notExpression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "combineExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "expression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "Arguments",
                                                                        },
                                                                      ],
                                                                      "Colon": Array [
                                                                        Object {
                                                                          "endColumn": 9,
                                                                          "endLine": 1,
                                                                          "endOffset": 8,
                                                                          "image": "::",
                                                                          "startColumn": 8,
                                                                          "startLine": 1,
                                                                          "startOffset": 7,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /::/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "Colon",
                                                                            "tokenTypeIdx": 37,
                                                                          },
                                                                          "tokenTypeIdx": 37,
                                                                        },
                                                                      ],
                                                                      "FunctionGroupName": Array [
                                                                        Object {
                                                                          "endColumn": 7,
                                                                          "endLine": 1,
                                                                          "endOffset": 6,
                                                                          "image": "custom",
                                                                          "startColumn": 2,
                                                                          "startLine": 1,
                                                                          "startOffset": 1,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[a-zA-Z\\]\\[a-zA-Z0-9_\\]\\*/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "FunctionGroupName",
                                                                            "tokenTypeIdx": 38,
                                                                          },
                                                                          "tokenTypeIdx": 38,
                                                                        },
                                                                      ],
                                                                      "FunctionName": Array [
                                                                        Object {
                                                                          "endColumn": 13,
                                                                          "endLine": 1,
                                                                          "endOffset": 12,
                                                                          "image": "PLUS",
                                                                          "startColumn": 10,
                                                                          "startLine": 1,
                                                                          "startOffset": 9,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[A-Z\\]\\[A-Z0-9_\\]\\*/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "FunctionName",
                                                                            "tokenTypeIdx": 39,
                                                                          },
                                                                          "tokenTypeIdx": 39,
                                                                        },
                                                                      ],
                                                                      "LParen": Array [
                                                                        Object {
                                                                          "endColumn": 14,
                                                                          "endLine": 1,
                                                                          "endOffset": 13,
                                                                          "image": "(",
                                                                          "startColumn": 14,
                                                                          "startLine": 1,
                                                                          "startOffset": 13,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\(/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "LParen",
                                                                            "tokenTypeIdx": 31,
                                                                          },
                                                                          "tokenTypeIdx": 31,
                                                                        },
                                                                      ],
                                                                      "RParen": Array [
                                                                        Object {
                                                                          "endColumn": 19,
                                                                          "endLine": 1,
                                                                          "endOffset": 18,
                                                                          "image": ")",
                                                                          "startColumn": 19,
                                                                          "startLine": 1,
                                                                          "startOffset": 18,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\)/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "RParen",
                                                                            "tokenTypeIdx": 32,
                                                                          },
                                                                          "tokenTypeIdx": 32,
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "FunctionCall",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Custom Function Simple cst 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                12,
                13,
                15,
                16,
              ],
              "categoryMatchesMap": Object {
                "12": true,
                "13": true,
                "15": true,
                "16": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 12,
        },
        "tokenTypeIdx": 12,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "combineExpression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "AdditionOperator": Array [
                                                Object {
                                                  "endColumn": 3,
                                                  "endLine": 1,
                                                  "endOffset": 2,
                                                  "image": "+",
                                                  "startColumn": 3,
                                                  "startLine": 1,
                                                  "startOffset": 2,
                                                  "tokenType": Object {
                                                    "CATEGORIES": Array [
                                                      Object {
                                                        "CATEGORIES": Array [],
                                                        "PATTERN": /NOT_APPLICABLE/,
                                                        "categoryMatches": Array [
                                                          19,
                                                          28,
                                                        ],
                                                        "categoryMatchesMap": Object {
                                                          "19": true,
                                                          "28": true,
                                                        },
                                                        "isParent": true,
                                                        "name": "AdditionOperator",
                                                        "tokenTypeIdx": 5,
                                                      },
                                                    ],
                                                    "PATTERN": /\\\\\\+/,
                                                    "categoryMatches": Array [],
                                                    "categoryMatchesMap": Object {},
                                                    "isParent": false,
                                                    "name": "Plus",
                                                    "tokenTypeIdx": 19,
                                                  },
                                                  "tokenTypeIdx": 19,
                                                },
                                              ],
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "constantExpression": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "NumberLiteralExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "NumberLiteral": Array [
                                                                              Object {
                                                                                "endColumn": 2,
                                                                                "endLine": 1,
                                                                                "endOffset": 1,
                                                                                "image": "1",
                                                                                "startColumn": 2,
                                                                                "startLine": 1,
                                                                                "startOffset": 1,
                                                                                "tokenType": Object {
                                                                                  "CATEGORIES": Array [],
                                                                                  "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                  "categoryMatches": Array [],
                                                                                  "categoryMatchesMap": Object {},
                                                                                  "isParent": false,
                                                                                  "name": "NumberLiteral",
                                                                                  "tokenTypeIdx": 33,
                                                                                },
                                                                                "tokenTypeIdx": 33,
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "NumberLiteralExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "constantExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                              "rhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "constantExpression": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "NumberLiteralExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "NumberLiteral": Array [
                                                                              Object {
                                                                                "endColumn": 4,
                                                                                "endLine": 1,
                                                                                "endOffset": 3,
                                                                                "image": "1",
                                                                                "startColumn": 4,
                                                                                "startLine": 1,
                                                                                "startOffset": 3,
                                                                                "tokenType": Object {
                                                                                  "CATEGORIES": Array [],
                                                                                  "PATTERN": /\\[0-9\\]\\+\\[\\.\\]\\?\\[0-9\\]\\*\\(\\[eE\\]\\[\\+-\\]\\[0-9\\]\\+\\)\\?/,
                                                                                  "categoryMatches": Array [],
                                                                                  "categoryMatchesMap": Object {},
                                                                                  "isParent": false,
                                                                                  "name": "NumberLiteral",
                                                                                  "tokenTypeIdx": 33,
                                                                                },
                                                                                "tokenTypeIdx": 33,
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "NumberLiteralExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "constantExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Custom Function Today track 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                12,
                13,
                15,
                16,
              ],
              "categoryMatchesMap": Object {
                "12": true,
                "13": true,
                "15": true,
                "16": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 12,
        },
        "tokenTypeIdx": 12,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "combineExpression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "FunctionCall": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "FunctionName": Array [
                                                                        Object {
                                                                          "endColumn": 6,
                                                                          "endLine": 1,
                                                                          "endOffset": 5,
                                                                          "image": "TODAY",
                                                                          "startColumn": 2,
                                                                          "startLine": 1,
                                                                          "startOffset": 1,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[A-Z\\]\\[A-Z0-9_\\]\\*/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "FunctionName",
                                                                            "tokenTypeIdx": 39,
                                                                          },
                                                                          "tokenTypeIdx": 39,
                                                                        },
                                                                      ],
                                                                      "LParen": Array [
                                                                        Object {
                                                                          "endColumn": 7,
                                                                          "endLine": 1,
                                                                          "endOffset": 6,
                                                                          "image": "(",
                                                                          "startColumn": 7,
                                                                          "startLine": 1,
                                                                          "startOffset": 6,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\(/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "LParen",
                                                                            "tokenTypeIdx": 31,
                                                                          },
                                                                          "tokenTypeIdx": 31,
                                                                        },
                                                                      ],
                                                                      "RParen": Array [
                                                                        Object {
                                                                          "endColumn": 8,
                                                                          "endLine": 1,
                                                                          "endOffset": 7,
                                                                          "image": ")",
                                                                          "startColumn": 8,
                                                                          "startLine": 1,
                                                                          "startOffset": 7,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\)/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "RParen",
                                                                            "tokenTypeIdx": 32,
                                                                          },
                                                                          "tokenTypeIdx": 32,
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "FunctionCall",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;
